# Learning-Labyrinth

./: .env  .gitignore  ;  Cargo.toml  README.md  package-lock.json  package.json
public/: index.html
server/: addChapter.js  addCourse.js  courseTemplate.json  main.rs  server.js  test.html  testEnv.js
server/config/: corsOptions.js  dbConn.js
server/controllers/: authController.js  deleteController.js  index.js  logoutController.js  refreshController.js  registerController.js
server/controllers/Chapters/: newChapterController.js
server/controllers/Courses/: deleteCourseController.js  newCourseController.js  newCourseController.ts  updateCourseController.js
server/middleware/: VerifyJWT.js
server/model/: Course.js  User.js  idMappings.js
server/routes/: auth.js  delete.js  index.js  logout.js  refresh.js  register.js
server/routes/courseAPIs/: newCourse.js  removeCourse.js  updateCourse.js
server/routes/courseAPIs/chapterAPIs/: newChapter.js
server/scripts/: addChapter.js  addCourse.js  package-lock.json  package.json  removeCourse.js  updateExistingCourse.js
server/templates/: chapterTemplate.json  courseTemplate.json  updateCourseTemplate.json
src/: App.js
src/Styles/: global.module.css  home.module.css  landing.module.css  register-auth.module.css  sign-up.module.css
src/components/: ProtectedRoute.js  header.js
src/pages/: home.js  landing.js  logout.js  sign-in.js  sign-up.js
src/pages/utils/: HomeURL.js  checkLogin.js  logout.js  sendFormData.js
