[package]
name = "learning_labyrinth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }  
mysql = "20.1"  

[[bin]]
name = "learning_labyrinth"  
path = "server/main.rs"     

